--- a/BOTO.html
+++ b/BOTO.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<h1><strong>Git & GitHub</strong></h1>
-	<h3>Ola, Hoje estamos aprendendo sobre Git e Git Hub!</h3>
+	<h2>Ola, Hoje estamos aprendendo sobre Git e Git Hub!</h2>
+	<h2>Bem-Vindos ao Ensino da Etec, Com professor Corotinho</h2>
 
-	
 </body>
 </html>
